<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.UserDetailActivity">

    <TextView
            android:text="@string/default_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name_detailuser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" />

    <TextView
            android:text="@string/default_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username_detailuser"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_detailuser"
            app:layout_constraintEnd_toEndOf="@+id/tv_name_detailuser"
            app:layout_constraintStart_toStartOf="@+id/tv_name_detailuser"
            android:layout_marginTop="8dp" />

    <TextView
            android:text="@string/default_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email_desc_detailuser"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_detailuser"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp" />

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_desc_detailuser"
            app:layout_constraintStart_toStartOf="@+id/tv_email_desc_detailuser"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="2dp"
            android:id="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/default_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_email_detailuser"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
            android:text="@string/default_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_company_desc_detailuser"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            android:layout_marginTop="16dp" />

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_company_desc_detailuser"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="@+id/tv_company_desc_detailuser"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            android:id="@+id/cardView4"
            app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/default_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_company_detailuser"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
            android:text="@string/default_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_address_desc_detailuser"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            android:layout_marginTop="16dp" />

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_address_desc_detailuser"
            app:layout_constraintStart_toStartOf="@+id/tv_address_desc_detailuser"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cardView2"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="2dp"
            app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/default_street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_address_street_detailuser"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp" />

            <TextView
                    android:text="@string/default_suite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_address_suite_detailuser"
                    app:layout_constraintStart_toStartOf="@+id/tv_address_street_detailuser"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address_street_detailuser"
                    android:layout_marginTop="2dp" />

            <TextView
                    android:text="@string/default_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_address_city_detailuser"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address_suite_detailuser"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@+id/tv_address_suite_detailuser" />

            <TextView
                    android:text="@string/default_zipcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_address_zipcode_detailuser"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address_city_detailuser"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@+id/tv_address_city_detailuser" />

            <TextView
                    android:text="@string/default_geo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_address_geo_detailuser"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address_zipcode_detailuser"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@+id/tv_address_zipcode_detailuser"
                    android:gravity="center"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView4"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="5dp">

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_albums" />
    </androidx.cardview.widget.CardView>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_user_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>