<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailPostActivity">

    <TextView
            android:text="@string/default_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title_detail"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:gravity="fill|fill_horizontal"
            android:textAlignment="gravity" />

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
            app:contentPadding="8dp"
            android:id="@+id/cardView3"
            app:cardCornerRadius="5dp">

        <TextView
                android:text="@string/default_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_body_detail"
                android:textSize="24sp"
                android:textAlignment="gravity"
                android:gravity="fill_horizontal" />
    </androidx.cardview.widget.CardView>

    <TextView
            android:text="@string/default_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username_detail"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="8dp"
            app:drawableStartCompat="@drawable/ic_baseline_person_24"
            android:gravity="center" />

    <TextView
            android:text="@string/default_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_comments_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_detail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:textStyle="bold" />

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_comments_detail"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="8dp"
            app:contentPadding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rv_comments"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_detail_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>